# rust

./: .gitignore  README.md
LinkedList/: Cargo.toml
RustyPython/: Cargo.toml  README.md
actix-api/: Cargo.toml
book-code/: Cargo.toml
book-code/chapter_8/: Cargo.toml
book-code/chapter_8/src/: hashmap.rs  main.rs
book-code/src/: chapter10.rs  chapter13.rs  chapter14.rs  chapter15.rs  chapter16.rs  chapter17.rs  chapter18.rs  chapter19.rs  chapter8.rs  chapter9.rs  chapter_3.rs  chapter_4.rs  chapter_5.rs  chapter_6.rs  chapter_7.rs  guessing_game.rs  main.rs
book-code/src/addr/: Cargo.toml
book-code/src/addr/src/: lib.rs
book-code/src/addr/tests/: integration_test.rs
book-code/src/addr/tests/common/: mod.rs
book-code/src/chapter10/: lifetimes.rs
book-code/src/chapter12/: Cargo.toml
book-code/src/chapter12/src/: lib.rs  main.rs
book-code/src/chapter8/: hashmap.rs  mod.rs
book-code/src/chapter9/: panic.rs  result.rs
book-code/src/chapter_10/: generics.rs  lifetimes.rs  mod.rs
book-code/src/chapter_8/: strings.rs  vectors.rs
book-code/src/chapter_8/src/: hashmap.rs  main.rs  strings.rs  vectors.rs
book-code/src/chapter_9/: mod.rs  result.rs
book-code/src/katas/: descending_ints.rs  mod.rs
book-code/src/restaurant/: Cargo.toml
book-code/src/restaurant/src/: lib.rs
book-code/src/restaurant/src/front_of_house/: hosting.rs
chapter12/: Cargo.toml
cli_app/: Cargo.toml
cli_app/src/: main.rs
concurrency/: Cargo.toml
fibonacci/: Cargo.toml
iters/: Cargo.toml
rbxfile/: Cargo.toml  README.md  deploy.sh
rbxfile/src/: main.rs
(+78 files in other folders)
