[package]
name = "rust_book_tutorials"
version = "0.1.0"
authors = ["langnostic <langnostic1@pm.me>"]
edition = "2018"
description = "A collection of code while I work through The Book"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
itertools = "0.10.*"

[profile.dev]
opt-level = 1