[package]
name = "cli_app"
version = "0.1.0"
authors = ["Joey Bagels <jfitzy1321@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.0"
failure = "0.1.5"
exitfailure = "0.5.1"
indicatif = "0.13.0"