[package]
name = "rbxfile"
version = "0.9.0"
authors = ["JFizty1321"]
edition = "2018"
description = "Rust By Example File Creation - creates .rs files for following along with the Rust by Example book"
repository = "https://https://github.com/JFitzy1321/rbxfile"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
